--- a/output_examples.ipynb
+++ b/output_examples.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "source": [
     "from scraper import restaurants\r\n",
     "from data_helper import tag_correction\r\n",
@@ -60,13 +60,13 @@
    "execution_count": 15,
    "source": [
     "# our custom kitchen groups for higher readability and cleaner plots\r\n",
-    "kitchens = {\"Asiatisch\": [\"Sushi\", \"Japanisch\", \"Poke bowl\", \"Indisch\", \"Thailändisch\", \"Curry\",\r\n",
+    "kitchens = {\"Asiatisch\": [\"Aisatisch\",\"Sushi\", \"Japanisch\", \"Poke bowl\", \"Indisch\", \"Thailändisch\", \"Curry\",\r\n",
     "                        \"Vietnamesisch\", \"Chinesisch\", \"Koreanisch\", \"Dumplings\", \"Indonesisch\", \"Pakistanisch\"],\r\n",
-    "        \"Orientalisch\": [\"Türkisch\", \"Döner\", \"Falafel\", \"100% Halal\", \"Persisch\", \"Türkische Pizza\",\r\n",
+    "        \"Orientalisch\": [\"Orientalisch\", \"Türkisch\", \"Döner\", \"Falafel\", \"100% Halal\", \"Persisch\", \"Türkische Pizza\",\r\n",
     "                        \"Arabisch\", \"Syrisch\", \"Libanesisch\", \"Gyros\", \"Griechisch\", \"Balkanküche\"],\r\n",
-    "        \"Italienisch\": [\"Italienische Pizza\", \"Pasta\"],\r\n",
-    "        \"Amerikanisch\": [\"Burger\", \"Amerikanische Pizza\", \"Hot Dog\", \"Sandwiches\", \"Mexikanisch\", \"Argentinisch\", \"Spareribs\"],\r\n",
-    "        \"Vegetarisch\": [\"Vegan\"],\r\n",
+    "        \"Italienisch\": [\"Italienisch\", \"Italienische Pizza\", \"Pasta\"],\r\n",
+    "        \"Amerikanisch\": [\"Amerikanisch\", \"Burger\", \"Amerikanische Pizza\", \"Hot Dog\", \"Sandwiches\", \"Mexikanisch\", \"Argentinisch\", \"Spareribs\"],\r\n",
+    "        \"Vegetarisch\": [\"Vegetarisch\", \"Vegan\"],\r\n",
     "        \"Cafe & Kuchen\": [\"Eiscreme\", \"Snacks\", \"Kuchen\", \"Nachspeisen\", \"Backwaren\", \"Café\", \"Frühstück\"]}\r\n",
     "\r\n",
     "city1 = tag_correction(city1, kitchens)"
