lets scrape main

--- a/output_examples.ipynb
+++ b/output_examples.ipynb
@@ -3,9 +3,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "You need to set up your chromedriver path in the scraper.py file first before using this notebook <br>\n",
-    "\n",
-    "TODO Punkte Beschreibung Restaurant type aufbau"
+    "<b>Warning:<b> <br>\r\n",
+    "* You need to set up your chromedriver path in the scraper.py file first before using this notebook <br>\r\n",
+    "* The cells have been pre-executed, the explanation refers to the values of the pre-executed results\r\n"
    ],
    "metadata": {}
   },
@@ -23,8 +23,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The next cell will take quite a long time (about a minute or longer) to gather the data <br>\n",
-    "Don't panic if the browser starts working on its own, it is supposed to do so"
+    "The next cell will take quite a long time (about a minute or longer) to gather the data. <br>\r\n",
+    "Don't panic if the browser starts working on its own, it is supposed to do so."
    ],
    "metadata": {}
   },
@@ -34,6 +34,33 @@
    "source": [
     "city1 = restaurants(\"Osnabrück\")\r\n",
     "city2 = restaurants(\"Bielefeld\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The returning list comes in a specific format: <br>\r\n",
+    "We have a list which contains each restaurant as a tuple. <br>\r\n",
+    "These tuples have the following structure of elements: <br>\r\n",
+    "* Name of the Restaurant (String)\r\n",
+    "* List of kitchen-types/tags (List of Strings)\r\n",
+    "* Time of delivery in minutes (Integer)\r\n",
+    "* Delivery costs in euro (Float)\r\n",
+    "* Minimum order value for delivery in euro (Float)\r\n",
+    "* Rating from 0 to 5 in .5 steps (Float)\r\n",
+    "* Number of ratings (Integer)\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "\"\"\"[(restaurant_name: str, [type_kitchen1: str, type_kitchen2: str,...]: list, \r\n",
+    "                        time_of_delivery: int, delivery_costs: float, min_order_value: float,\r\n",
+    "                        rating: float, number_of_ratings: int): tuple, ...]: list\"\"\""
    ],
    "outputs": [],
    "metadata": {}
