Jupyter Notebook final

--- a/output_examples.ipynb
+++ b/output_examples.ipynb
@@ -146,12 +146,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In the plotes above you can see the distribution of kitchens in each city. <br>\n",
-    "You can see that in Bielefeld we have a very high amount of \"others\". <br>\n",
-    "That is the case because tags which make up less than 5% in the sum of all kitchens(tags) are considered to small to show them as a single category. <br>\n",
-    "In the plot of Osnabrück with our kitchen groups you can see a cleaner distribution with more meaning. <br>\n",
-    "That is because we combine tags/kitchens like \"Pasta\", \"Italienisch\" and \"Italienische Pizza\" into one group because it usually appears together and <br>\n",
-    "refers to the same group of restaurants"
+    "In the plots above you can see the distribution of kitchens in each city. <br>\r\n",
+    "You can see that in Bielefeld we have a very high amount of \"others\". <br>\r\n",
+    "That is the case because tags which make up less than 5% in the sum of all kitchens(tags) are considered too small to show them as a single category. <br>\r\n",
+    "In the plot of Osnabrück with our kitchen groups you can see a cleaner distribution with more meaning. <br>\r\n",
+    "That is because we combine tags/kitchens like \"Pasta\", \"Italienisch\" and \"Italienische Pizza\" into one group because it usually appears together and <br>\r\n",
+    "refers to the same group of restaurants."
    ],
    "metadata": {}
   },
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "source": [
     "For the next plot, the Bar plot of averages, we will only look at one city. <br>\r\n",
-    "If we change the index value to a value in the range from 2 to 5 we get the average of: <br>\r\n",
+    "If we change the index to a value in the range from 2 to 5 we get the average of: <br>\r\n",
     "<ul>\r\n",
     "<li>2. delivery time </li>\r\n",
     "<li>3. delivery cost</li>\r\n",
@@ -468,7 +468,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In the heatmap we can see which city has the highest diversity in the categories. The more colorfull a row is the more kitches of each type can be found in that city. <br>\r\n",
+    "In the heatmap we can see which city has the highest diversity in the categories. The brighter a row is the more kitches of each type can be found in that city. <br>\r\n",
     "For example: We can see that Bielefeld has a lot to offer for the kitchen types \"Orientalisch\", \"Amerikanisch\" and \"Italienisch\" but hasn't got much to offer in for the type \"Vegetarisch\"."
    ],
    "metadata": {}
