--- a/output_examples.ipynb
+++ b/output_examples.ipynb
@@ -222,12 +222,12 @@
    "source": [
     "For the next plot, the Bar plot of averages, we will only look at one city. <br>\r\n",
     "If we change the index to a value in the range from 2 to 5 we get the average of: <br>\r\n",
-    "<ul>\r\n",
-    "<li>2. delivery time </li>\r\n",
-    "<li>3. delivery cost</li>\r\n",
-    "<li>4. minimum amount for an order</li>\r\n",
-    "<li>5. rating</li>\r\n",
-    "</ul> <br>\r\n",
+    "\r\n",
+    "* 2. delivery time\r\n",
+    "* 3. delivery cost\r\n",
+    "* 4. minimum amount for an order\r\n",
+    "* 5. rating\r\n",
+    "\r\n",
     "The bars show the average in each category and the red line for the whole city/location."
    ],
    "metadata": {}
